add masterpassword change
